--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -50,7 +50,7 @@ header {
     flex-direction: column;
     width: 60%;
     text-align: left;
-} 
+}
 
 .title_upper {
     font-family: 'Dancing Script', cursive;
@@ -234,7 +234,7 @@ hr.white_line {
     border: none;
     cursor: pointer;
     float: right;
-    transition: all 0.3s;
+    transition: all 0.2s;
 }
 
 .sidebar-toggle:hover {
@@ -399,6 +399,7 @@ hr.white_line {
     margin-top: 1.8rem;
 }
 
+
 /*ABOUT*/
 .about_content {
     margin: 6em auto 2em auto;
@@ -412,6 +413,55 @@ hr.white_line {
 .about_pic {
     margin: 1em auto;
     width: 100%;
+}
+
+
+/*REVIEWS*/
+.reviews_title {
+    margin-top: 1.4em;
+}
+
+.review_container {
+    margin-top: 2em;
+}
+
+.review_card {
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    /* height: 12em; */
+}
+
+.review_person {
+    text-align: center;
+    /* width: 20%; */
+    padding: 1em;
+    /* padding: .3em; */
+}
+
+.review_pic {
+    width: 80%;
+    height: auto;
+    border-radius: 90%;
+    border: 5px solid rgb(243, 242, 242);
+}
+
+.review_name {
+    margin-top: .5em;
+    font-size: 1em;
+}
+
+.review_text {
+    font-size: 1em;
+}
+
+.review_location {
+    font-size: .8em;
+}
+
+.location_pic {
+    height: 1em;
+    width: 1em;
 }
 
 
@@ -442,7 +492,7 @@ hr.white_line {
         top: -20px;
         left: 450px;
     }
-    
+
     .sidebar {
         width: 400px;
     }
@@ -460,7 +510,6 @@ hr.white_line {
     }
 
     .foods a {
-        /* width: 58rem; */
         height: 25rem;
         margin: 0;
         width: 100%;
@@ -487,7 +536,6 @@ hr.white_line {
     }
 
     #catering-content {
-        /* height: 80%; */
         width: 40%;
     }
 
@@ -495,6 +543,38 @@ hr.white_line {
         height: 45rem;
         margin-top: 10em;
     }
+
+    /* .review_container {
+        column-gap: 5em;
+    } */
+
+    .review_card {
+        width: 70%;
+        margin: 3em auto;
+    }
+
+    .review_person {
+        width: 40%;
+    }
+
+    .review_pic {
+        width: 50%;
+        border: 10px solid white;
+    }
+
+    .review_name {
+        font-size: 2.6em;
+    }
+
+    .review_location {
+        font-size: 1.5em;
+    }
+
+    .review_text {
+        width: 60%;
+        font-size: 2.2vw;
+    }
+
 }
 
 
