--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -464,6 +464,19 @@ hr.white_line {
     width: 1em;
 }
 
+.mural {
+    background-color: white;
+}
+
+.mural_container {
+    text-align: center;
+}
+
+.mural_pic {
+    margin: 2em auto;
+    width: 80%;
+}
+
 
 /*FOOTER*/
 .footer {
@@ -563,11 +576,11 @@ hr.white_line {
     }
 
     .review_name {
-        font-size: 2.6em;
+        font-size: 2.2em;
     }
 
     .review_location {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 
     .review_text {
