--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -71,8 +71,6 @@ header {
     height: 30%;
     width: 50%;
     margin-top: 2em;
-    /* align-self: right; */
-    /* padding: .8em; */
 }
 
 
@@ -95,7 +93,6 @@ header {
     position: absolute;
     color: white;
     text-align: center;
-    /* margin-bottom: 1px; */
     width: 100%;
     bottom: 1rem;
     line-height: 2em;
@@ -122,13 +119,10 @@ header {
 }
 
 /*INTRODUCING THE PROJECT*/
-/* .main_content {
-    height: 40em;
-} */
-
 .main_text {
     padding: 1em;
     font-size: 1.3em;
+    margin-bottom: 2em;
 }
 
 
@@ -136,7 +130,6 @@ header {
 .foods {
     display: flex;
     flex-direction: column;
-    /* height: 40em; */
     background-color: white;
 }
 
@@ -144,7 +137,7 @@ h2 {
     padding-top: .3em;
     width: 100%;
     font-size: 3em;
-    height: 1.4em;
+    /* height: 1.4em; */
     text-align: center;
     font-family: 'Dancing Script', cursive;
 }
@@ -304,7 +297,6 @@ hr.white_line {
     visibility: hidden;
     width: 100%;
     height: 100%;
-    /* margin: auto; */
     position: fixed;
     left: 0;
     top: 0;
@@ -367,7 +359,6 @@ hr.white_line {
 .foods_container {
     display:flex;
     flex-direction: column;
-    /* height: 100%; */
 }
 
 .food_pic {
@@ -398,9 +389,7 @@ hr.white_line {
 }
 
 .catering_pic {
-    /* height: auto; */
     width: 90%;
-    /* margin-top: 1.8rem; */
     margin: 1.8rem auto;
 }
 
@@ -434,12 +423,10 @@ hr.white_line {
     display: flex;
     flex-direction: row;
     padding: 1em;
-    /* height: 12em; */
 }
 
 .review_person {
     text-align: center;
-    /* width: 20%; */
     padding: 1.3em 1.1em;
 }
 
@@ -458,11 +445,10 @@ hr.white_line {
 .review_text {
     padding: 1.1em 0;
     font-size: 1em;
-    /* border: 1px solid red; */
 }
 
 .review_location {
-    font-size: .8em;
+    font-size: .7em;
 }
 
 .location_pic {
@@ -519,6 +505,16 @@ hr.white_line {
         width: 50%;
     }
 
+    h2 {
+        font-size: 5em;
+        padding-top: 0;
+    }
+
+    .main_text {
+        width: 80%;
+        margin: 0 auto 2em auto;
+    }
+
     .food_cat {
         flex-direction: row;
         justify-content: space-around;
@@ -564,17 +560,20 @@ hr.white_line {
 
     .catering_pic {
         height: 45rem;
-        /* margin-top: 10em; */
         margin: 2.2em auto;
     }
 
     .about_content {
-        width: 70%;
+        width: 80%;
     }
 
-    /* .review_container {
-        column-gap: 5em;
+    /* .about_text {
+        display: flex;
     } */
+
+    .reviews_title {
+        margin-top: 1.2em;
+    }
 
     .review_card {
         width: 80%;
@@ -591,7 +590,7 @@ hr.white_line {
     }
 
     .review_name {
-        font-size: 2.2em;
+        font-size: 2em;
     }
 
     .review_location {
