--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -385,12 +385,18 @@ hr.white_line {
 }
 
 #catering-content {
-    height: 80%;
+    height: 70%;
+}
+
+.catering_picture {
+    width: 100%;
+    text-align: center;
 }
 
 .catering_pic {
     width: 90%;
-    margin: 1.8rem auto;
+    margin: 2em auto 0 auto;
+    padding-top: 3em;
 }
 
 
@@ -535,8 +541,8 @@ hr.white_line {
 
     .modal-content {
         width: 70%;
-        bottom: 13em;
-        top: 12em;
+        bottom: 2em;
+        top: 2em;
     }
 
     .foods_container {
@@ -546,8 +552,8 @@ hr.white_line {
     }
 
     .food_intro {
-        font-size: 1.8rem;
-        padding: 0 1em;
+        font-size: 1.2rem;
+        padding: 1em 1em;
     }
 
     .food_pic {
@@ -555,12 +561,14 @@ hr.white_line {
     }
 
     #catering-content {
-        width: 40%;
+        width: 50%;
+        height: 90%;
     }
 
     .catering_pic {
-        height: 45rem;
-        margin: 2.2em auto;
+        width: 90%;
+        /* padding: 1em; */
+        height: 33em;
     }
 
     .about_content {
@@ -627,6 +635,15 @@ hr.white_line {
         font-size: 2.2vw;
     }
 
+    .mural_container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .mural_pic {
+        height: 600px;
+        width: auto;
+    }
 }
 
 
