--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -513,6 +513,12 @@ hr.white_line {
 
 
 /*MEDIA QUERIES*/
+@media only screen and (max-height: 500px) {
+    .intro_box {
+        display: none;
+    }
+}
+
 @media only screen and (min-width: 900px) {
     .header_title {
         margin: auto;
@@ -689,7 +695,3 @@ hr.white_line {
         width: auto;
     }
 }
-
-
-
-/*TESTES*/
