--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -416,13 +416,15 @@ hr.white_line {
 
 .catering_picture {
     width: 100%;
+    height: 100%;
     text-align: center;
 }
 
 .catering_pic {
-    width: 80%;
+    width: 85%;
     margin: 2em auto 0 auto;
-    padding-top: 3em;
+    padding-top: 1em;
+    /* max-height: 35em; */
 }
 
 
@@ -517,9 +519,76 @@ hr.white_line {
     .intro_box {
         display: none;
     }
+
+    .sidebar_logo {
+        width: 4em;
+        height: 4em;
+    }
+
+    .links a {
+        font-size: .8em;
+    }
+
+    #catering-content {
+        width: 60%;
+        height: 90%;
+        font-size: 1em;
+    }
+
+    .catering_picture {
+        width: 60%;
+        margin: auto;
+    }
+
+    .catering_pic {
+        max-height: 2em;
+    }
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (max-height: 800px) {
+    .catering_pic {
+        max-height: 35em;
+    }
+}
+
+
+@media only screen and (min-width: 480px) {
+    .intro_box {
+        left: 1em;
+        right: .5em;
+        width: 50%;
+        font-size: 1.4rem;
+    }
+
+    .modal-content {
+        left: 1.5em;
+        right: 1.5em;
+    }
+
+    .foods_container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .food_pic {
+        width: 20rem;
+    }
+
+    .catering_pic {
+        height: 45em;
+        margin-top: 0;
+        padding-top: 0;
+    }
+}
+
+/* @media only screen and (min-width: 769px) {
+    
+} */
+
+
+@media only screen and (min-width: 1024px) {
     .header_title {
         margin: auto;
         width: 50em;
