--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -411,22 +411,21 @@ hr.white_line {
 }
 
 #catering-content {
-    height: 75%;
-}
-
-.catering_picture {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    margin: 4.5em auto;
     text-align: center;
 }
 
-.catering_pic {
-    width: 85%;
-    margin: 2em auto 0 auto;
-    padding-top: 1em;
-    /* max-height: 35em; */
+.catering-info {
+    height: 90%;
+    overflow: hidden;
 }
 
+.catering_picture {
+    margin: 2em auto 1em auto;
+    width: 90%;
+    height: 90%;
+}
 
 /*ABOUT*/
 .about_content {
@@ -530,7 +529,6 @@ hr.white_line {
     }
 
     #catering-content {
-        width: 60%;
         height: 90%;
         font-size: 1em;
     }
@@ -583,9 +581,11 @@ hr.white_line {
     }
 }
 
-/* @media only screen and (min-width: 769px) {
-    
-} */
+@media only screen and (min-width: 769px) {
+    #catering-content {
+        margin: 1em auto;
+    }
+}
 
 
 @media only screen and (min-width: 1024px) {
