--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-/*GLOBAL*/
+/* GLOBAL */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -27,7 +27,7 @@ html {
 }
 
 
-/*HEADER*/
+/* HEADER */
 header {
     top: 0;
     width: 100%;
@@ -92,7 +92,6 @@ header {
     right: .2em;
     width: 10rem;
     display: flex;
-    /* text-align: center; */
 }
 
 .lang_selector a {
@@ -109,12 +108,11 @@ header {
 }
 
 .active {
-    /* text-decoration: underline; */
     font-weight: 1000;
     text-transform: uppercase;
 }
 
-/*ORDER INFO*/
+/* ORDER INFO */
 .order_info {
     background-color: transparent;
     position: absolute;
@@ -145,7 +143,15 @@ header {
     margin-top: .2em;
 }
 
-/*INTRODUCING THE PROJECT*/
+.contact_ico {
+    padding-top: .2em;
+    width: 1.2em;
+    height: 1.2em;
+    color: white;
+}
+
+
+/* INTRODUCING THE WORK */
 .main_text {
     padding: 1em;
     font-size: 1.3em;
@@ -153,7 +159,7 @@ header {
 }
 
 
-/*TYPES OF FOODS*/
+/* TYPES OF FOODS */
 .foods {
     display: flex;
     flex-direction: column;
@@ -218,13 +224,8 @@ hr.white_line {
     transition: .3s;
 }
 
-/*PRIVATE EVENTS*/
-.private_events {
-    height: 40em;
-}
 
-
-/*SIDE MENU*/
+/* SIDE MENU */
 .sidebar {
     position: fixed;
     z-index: 10;
@@ -299,7 +300,7 @@ hr.white_line {
 }
 
 
-/*BACKGROUND SLIDESHOW*/
+/* BACKGROUND SLIDESHOW */
 .slideshow {
     top: 0;
     width: 100%;
@@ -318,7 +319,7 @@ hr.white_line {
 }
 
 
-/*MODAL*/
+/* MODALS */
 .modal {
     visibility: hidden;
     width: 100%;
@@ -428,7 +429,7 @@ hr.white_line {
     height: 79%;
 }
 
-/*ABOUT*/
+/* ABOUT */
 .about_content {
     margin: 6em auto 2em auto;
 }
@@ -444,7 +445,7 @@ hr.white_line {
 }
 
 
-/*REVIEWS*/
+/* REVIEWS */
 .reviews_title {
     margin-top: 1.4em;
 }
@@ -504,7 +505,7 @@ hr.white_line {
 }
 
 
-/*FOOTER*/
+/* FOOTER */
 .footer {
     height: 80px;
     background-color: rgb(243, 203, 210);
@@ -514,7 +515,7 @@ hr.white_line {
 }
 
 
-/*MEDIA QUERIES*/
+/* MEDIA QUERIES */
 @media only screen and (max-height: 500px) {
     .intro_box {
         display: none;
@@ -549,7 +550,6 @@ hr.white_line {
         max-height: 35em;
     }
 }
-
 
 @media only screen and (min-width: 481px) and (max-width: 768px) {
     .intro_box {
@@ -767,7 +767,6 @@ hr.white_line {
     .mural_container {
         display: flex;
         flex-wrap: wrap;
-        /* gap: 2.5em; */
         justify-content: space-around;
     }
 
@@ -775,15 +774,4 @@ hr.white_line {
         height: 600px;
         width: auto;
     }
-}
-
-
-
-/*TESTES*/
-
-.contact_ico {
-    padding-top: .2em;
-    width: 1.2em;
-    height: 1.2em;
-    color: white;
 }
