Delete php form for now.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -493,7 +493,7 @@ hr.white_line {
 
 
 /* CONTACT FORM */
-.form_container {
+/* .form_container {
     width: 100%;
     align-items: center;
 }
@@ -527,7 +527,7 @@ input {
     border: none;
     height: 2em;
     margin-top: 1.8em
-}
+} */
 
 /* GALLERY */
 .mural {
